--- a/ux-animation.html
+++ b/ux-animation.html
@@ -135,7 +135,7 @@
                 <div class="border-b-4 border-yellow-400 w-16"></div>
             </div>
 
-            <p class="text-gray-400 text-center">Led the entire design process across modules and user levels—translating complex workflows into intuitive, role-sensitive experiences.</p>
+            <p class="text-gray-400 text-center">From ideation to implementation, I led the design and motion strategy for interactive transitions, microinteractions, and storytelling animations—ensuring they elevated both usability and visual delight without compromising performance.</p>
 
             <div class="flex flex-wrap gap-2 items-center text-center justify-center">
                 <span class="py-4 px-8 bg-gray-800 rounded-full">Micro-interaction Design</span>
@@ -157,26 +157,7 @@
                 <p class="text-2xl font-bold">Problem Statement</p>
                 <div class="border-b-4 border-yellow-400 w-16"></div>
             </div>
-            <p class="text-gray-400 text-center lg:w-4/5">In a rapidly evolving digital landscape, organizations face challenges in maintaining visual consistency and user experience across multiple platforms and products. Existing design processes often lead to fragmented design elements, inefficient collaboration, and a lack of accessibility for both designers and developers. TARP aims to address these issues by providing a comprehensive design system that encompasses a cohesive set of guidelines, components, and best practices tailored for scalability and flexibility. By streamlining workflows and ensuring consistency in design and branding, TARP empowers teams to create intuitive, user-friendly interfaces that enhance overall user engagement and satisfaction.</p>
-        </div>
-    </div>
-
-    <hr class="border-t-2 border-gray-700 mx-4 my-8 lg:w-3/5 lg:mx-auto">
-
-    <!-- Research -->
-    <div class="flex flex-col gap-6 px-4 lg:w-3/5 lg:m-auto lg:px-0">
-
-        <!-- Section Header -->
-        <div class="flex flex-col items-center gap-4">
-            <div class="flex flex-col gap-2 items-center">
-                <p class="text-2xl font-bold">Userflow</p>
-                <div class="border-b-4 border-yellow-400 w-16"></div>
-            </div>
-            <p class="text-gray-400 text-center mt-2 lg:w-4/5">The application's information architecture was redesigned based on user feedback and persona insights. The goal was to ensure that navigation was intuitive, and information was organized in a logical and accessible manner.</p>
-            
-            <div class="w-full mx-auto mt-4">
-                <img src="./images/samasta/userflow_1.png" alt="Descriptive alt text" class="w-full h-auto rounded-lg shadow-md" />
-            </div>
+            <p class="text-gray-400 text-center lg:w-4/5">In many digital portfolios and modern web experiences, static transitions and abrupt content changes can lead to disjointed user journeys—especially when navigating between sections, viewing media, or interacting with featured content. Users often struggle to maintain context when shifting between views or lose engagement due to lack of visual feedback. The challenge was to design and implement smooth, meaningful UX animations that not only enhance aesthetic appeal but also improve clarity, flow, and interactivity across the user interface—while remaining lightweight and performance-friendly across devices.</p>
         </div>
     </div>
 
@@ -198,15 +179,16 @@
             <div class="flex flex-col gap-2">
                 <p class="text-xl font-bold">Overview of the Final Animation</p>
             </div>
-            <p class="text-gray-400 font-light">The final UX animation brought clarity, feedback, and emotional resonance to key user interactions across the app. Motion was used deliberately to reinforce usability—guiding attention, confirming actions, and illustrating transitions without overwhelming the experience.</p>
+            <p class="text-gray-400 font-light">The final UX animations in this project were designed to enrich interaction without distracting from usability. Each motion element was crafted to enhance clarity, maintain user flow, and add a touch of delight—especially in navigation-heavy or content-rich environments like portfolios or product showcases.</p>
 
             <p class="text-gray-200 font-medium">Animations included:</p>
 
-            <ul class="list-disc list-inside text-gray-400 space-y-2 mt-4">
-                <li>Micro-interactions like button taps, success checkmarks, and field focus transitions.</li>
-                <li>Page transitions that maintained spatial continuity and orientation</li>
-                <li>Status feedback for loading, syncing, and error states</li>
-                <li>Modular animations tailored to user roles (e.g., ASHA’s step-by-step form guidance vs. MO’s dashboard summaries)</li>
+            <ul class="list-disc list-inside text-gray-400 space-y-2">
+                <li>Smooth list-to-detail transitions that preserved spatial continuity and supported easy back-navigation</li>
+                <li>Section expand/collapse interactions that enabled deep dives into content without disorienting the user</li>
+                <li>Story-style modules that launched full-screen, played through, and auto-collapsed—removing friction from short, immersive content</li>
+                <li>Image zoom-to-full-screen views with actionable options like download, accompanied by animated affordances</li>
+                <li>Hero content reveals rendered progressively, building anticipation and directing attention in a controlled, elegant manner</li>
             </ul>
 
             <p class="text-gray-400 font-light">Each animation was tested for performance on low-end devices and optimized for minimal distraction. Lightweight formats like Lottie and native motion specs ensured smooth handoff to developers.</p>
@@ -299,7 +281,7 @@
             <div class="flex flex-col bg-gray-900 rounded-xl lg:rounded-3xl p-3 lg:p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
-                        <h3 class="text-2xl lg:text-3xl font-semibold">Animation 3: Expandable Project Sections with Smooth Transitions</h3>
+                        <h3 class="text-2xl lg:text-3xl font-semibold">Animation 3: Expandable Sections with Smooth Transitions</h3>
 
                         <p class="text-gray-400 font-light mt-3">This animation showcases an interactive transition between a list of projects and individual project detail views within a web or mobile interface.</p>
 
@@ -311,8 +293,8 @@
                         <div>
                             <p class="text-gray-300 font-medium mt-3">Behavior:</p>
                             <ul class="list-disc list-inside text-gray-400 space-y-2 mt-2">
-                                <li>Users begin with a clean list of project cards</li>
-                                <li>On click, the selected card expands into a full project detail view with a fluid motion</li>
+                                <li>Users begin with a clean list of section cards</li>
+                                <li>On click, the selected card expands into a full section detail view with a fluid motion</li>
                                 <li>A clear back action is provided, allowing the user to collapse back into the list view without reloading or jarring jumps</li>
                             </ul>
                         </div>
@@ -389,34 +371,36 @@
             <div class="flex flex-col bg-gray-900 rounded-xl lg:rounded-3xl p-3 lg:p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
-                        <h3 class="text-2xl lg:text-3xl font-semibold">Animation 5: Seamless View-to-Story Transition with Auto-Close</h3>
+                        <h3 class="text-2xl lg:text-3xl font-semibold">Animation 5: Full-Screen Image Viewer with Download Action</h3>
 
-                        <p class="text-gray-400 font-light mt-3">This animation showcases a smooth transition from a main view into a story-like detail view, followed by an automatic return to the original screen once the story completes.</p>
+                        <p class="text-gray-400 font-light mt-3">This animation demonstrates a full-screen image viewer that enhances media engagement by offering a dedicated download option within the viewer.</p>
 
                         <div>
                             <p class="text-gray-300 font-medium mt-3">Purpose:</p>
-                            <p class="text-gray-400 font-light mt-1">To create an immersive, lightweight storytelling experience that doesn't require manual back navigation.</p>
+                            <p class="text-gray-400 font-light mt-1">To provide users with a distraction-free image viewing experience and a clear, accessible way to download assets directly.</p>
                         </div>
 
                         <div>
                             <p class="text-gray-300 font-medium mt-3">Behavior:</p>
                             <ul class="list-disc list-inside text-gray-400 space-y-2 mt-2">
-                                <li>The user taps on a card or item</li>
-                                <li>It transitions fluidly into a full-screen story view</li>
-                                <li>After the animation or content ends, the screen automatically collapses back to the original view</li>
+                                <li>The user taps on an image thumbnail</li>
+                                <li>The image expands smoothly into a full-screen view</li>
+                                <li>A download button appears with a subtle animation</li>
+                                <li>On tapping the button, the image downloads with a brief visual confirmation</li>
                             </ul>
                         </div>
 
                         <div>
                             <p class="text-gray-300 font-medium mt-3">Design Consideration:</p>
                             <ul class="list-disc list-inside text-gray-400 space-y-2 mt-2">
-                                <li>Offers a focused, time-bound interaction</li>
-                                <li>Removes friction by eliminating the need for back buttons</li>
-                                <li>Ideal for showcasing short content previews, case studies, or highlights</li>
+                                <li>Encourages interaction with visual content in a clean, focused environment</li>
+                                <li>Reduces user effort by surfacing the download action contextually</li>
+                                <li>Adds polish through microinteractions and animated feedback</li>
+                                <li>Useful for showcasing portfolio images, downloadable templates, or product previews</li>
                             </ul>
                         </div>
 
-                        <p class="text-gray-400 font-light mt-1">This interaction is well-suited for mobile or portfolio experiences where you want to maintain user flow while presenting rich content in a lightweight, elegant manner.</p>
+                        <p class="text-gray-400 font-light mt-1">This interaction works well in creative portfolios, documentation hubs, or gallery-style experiences where imagery and accessibility are both key.</p>
 
                         <video autoplay muted loop playsinline class="w-full h-auto object-cover rounded-xl lg:rounded-3xl">
                             <source src="./images/animation/animation-6.mp4" type="video/mp4" />
@@ -431,34 +415,7 @@
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
                         <h3 class="text-2xl lg:text-3xl font-semibold">Animation 6</h3>
-                        <p class="text-gray-400 font-light mt-3">The profile section is essential for establishing credibility and trust within the app, allowing both investors and startup owners to showcase their backgrounds, expertise, and objectives. The investor profile provides a comprehensive view of their investment history, interests, and areas of expertise. It includes personal information such as the investor's name, profile picture, and a brief bio highlighting their professional background and investment philosophy. Additionally, the profile features a list of past investments, detailing the startup names, amounts invested, and the outcomes of those investments, as well as a section for preferred industries to aid in personalized startup recommendations. Connection options for direct messaging or scheduling meetings with startup owners promote networking and collaboration.</p>
-
-                        <!-- <div class="w-full mt-4">
-                            <img src="./images/animation/animation-4.mp4" alt="Project screenshot" class="w-full h-auto object-cover rounded-xl lg:rounded-3xl"/>
-                        </div> -->
-
-                        <div class="w-full mt-4">
-                            <video 
-                              src="./images/animation/Animation 3.mp4"
-
-                              autoplay 
-                              muted 
-                              loop 
-                              playsinline 
-                              class="w-full h-auto object-cover rounded-xl lg:rounded-3xl">
-                              Your browser does not support the video tag.
-                            </video>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Animation 7 -->
-            <div class="flex flex-col bg-gray-900 rounded-xl lg:rounded-3xl p-3 lg:p-6">
-                <div class="flex flex-col gap-8">
-                    <div class="flex flex-col gap-2">
-                        <h3 class="text-2xl lg:text-3xl font-semibold">Animation 7</h3>
-                        <p class="text-gray-400 font-light mt-3">The profile section is essential for establishing credibility and trust within the app, allowing both investors and startup owners to showcase their backgrounds, expertise, and objectives. The investor profile provides a comprehensive view of their investment history, interests, and areas of expertise. It includes personal information such as the investor's name, profile picture, and a brief bio highlighting their professional background and investment philosophy. Additionally, the profile features a list of past investments, detailing the startup names, amounts invested, and the outcomes of those investments, as well as a section for preferred industries to aid in personalized startup recommendations. Connection options for direct messaging or scheduling meetings with startup owners promote networking and collaboration.</p>
+                        <p class="text-gray-400 font-light mt-3">The hero animation introduces website elements with smooth, staggered transitions that guide the user’s attention in a visually engaging manner. As the page loads, key components like the headline, subtext, CTA buttons, and visual illustrations appear sequentially with fade-ins, slide-ins, or scale effects. This animation not only creates a polished first impression but also helps establish a visual hierarchy, ensuring users focus on the most important content first. It adds a sense of depth and energy to the hero section, making the landing experience feel dynamic, intentional, and thoughtfully crafted.</p>
 
                         <div class="w-full mt-4">
                             <video 
