--- a/project-1.html
+++ b/project-1.html
@@ -109,7 +109,7 @@
         <!-- Project Type -->
         <div class="flex flex-col gap-8 lg:flex-row bg-gray-900 rounded-3xl p-6 mx-4">
             <div class="flex flex-col items-center w-full">
-                <p class="text-xl font-bold text-center">Project type: End-to-end app + branding</p>
+                <p class="text-xl font-bold text-center">Project type: End-to-end app + Branding</p>
             </div>
         </div>
 
@@ -122,7 +122,7 @@
             </div>
 
             <div class="flex flex-col items-center w-full">
-                <img src="./images/chip/demo_svg.svg" alt="Logo" class="w-12 h-auto mb-4"/>
+                <img src="./images/icons/tools.svg" alt="Logo" class="w-12 h-auto mb-4"/>
                 <p class="text-gray-400 text-center lg:w-4/5">Tools</p>
                 <p class="font-bold text-center mt-2">Figma, FigJam, Jira, Confluence & Google Meet</p>
             </div>
