--- a/project-1.html
+++ b/project-1.html
@@ -245,7 +245,7 @@
 
         <div class="grid grid-cols-1 gap-8">
             <!-- Field Observations (Shadowing ASHAs and ANMs) -->
-            <div class="flex flex-col bg-gray-900 rounded-3xl p-3 lg:p-6">
+            <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
                 <img src="./images/icons/user-shadow.svg" alt="Logo" class="w-12 h-auto mb-4"/>
                 <p class="text-xl font-bold">Field Observations (Shadowing ASHAs and ANMs)</p>
                 <p class="text-gray-400 mt-4">To understand the real-world context of CHIP usage, I conducted immersive field visits to rural areas. I shadowed <b class="text-gray-200">ASHAs and ANMs during their daily routines</b>, particularly while they:</p>
@@ -271,7 +271,7 @@
             </div>
 
             <!-- User Interviews -->
-            <div class="flex flex-col bg-gray-900 rounded-3xl p-3 lg:p-6">
+            <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
                 <img src="./images/icons/user-shadow.svg" alt="Logo" class="w-12 h-auto mb-4"/>
                 <p class="text-xl font-bold">User Interviews</p>
                 <p class="text-gray-400 mt-4">I conducted semi-structured interviews with healthcare workers and supervisors across all three levels:</p>
@@ -299,7 +299,7 @@
             </div>
 
             <!-- Contextual Inquiry -->
-            <div class="flex flex-col bg-gray-900 rounded-3xl p-3 lg:p-6">
+            <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
                 <img src="./images/icons/user-shadow.svg" alt="Logo" class="w-12 h-auto mb-4"/>
                 <p class="text-xl font-bold">Contextual Inquiry</p>
                 <p class="text-gray-400 mt-4">While users performed tasks like DHS entry or Punch-IN, I asked them to “think aloud” to capture their natural workflow, hesitation points, and expectations.</p>
@@ -652,7 +652,7 @@
             </div>
 
             <!-- Methods -->
-            <div class="flex flex-col bg-gray-900 rounded-3xl p-3 lg:p-6">
+            <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
                 <img src="./images/chip/demo_svg.svg" alt="Logo" class="w-12 h-auto mb-4"/>
                 <p class="text-xl font-bold">Methods</p>
                 <p class="text-gray-400 mt-4">A mix of contextual testing, technical safeguards, and scalable design patterns were used to ensure CHIP works reliably in real-world rural settings.</p>
@@ -696,7 +696,7 @@
             </div>
 
             <!-- Success Metrics -->
-            <div class="flex flex-col bg-gray-900 rounded-xl lg:rounded-3xl p-3 lg:p-6">
+            <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
                 <img src="./images/icons/metrics.svg" alt="Logo" class="w-12 h-auto mb-2 lg:mb-4"/>
                 <p class="text-xl font-bold">Success Metrics</p>
                 <p class="text-gray-400 mt-2">Post-implementation testing revealed significant improvements across key usability indicators. From faster DHS completion to increased confidence and reduced form errors, the iterative design directly translated to real-world benefits for frontline health workers.</p>
@@ -760,7 +760,7 @@
         <div class="grid grid-cols-1 gap-8 lg:w-3/5 lg:m-auto lg:px-0">
 
             <!-- Login & Registration (RBAC Enabled) -->
-            <div class="flex flex-col bg-gray-900 rounded-xl lg:rounded-3xl p-3 lg:p-6">
+            <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
                         <h3 class="text-2xl lg:text-3xl font-semibold">Login & Registration (RBAC Enabled)</h3>
@@ -803,7 +803,7 @@
             </div>
 
             <!-- Punch-IN / Punch-OUT System -->
-            <div class="flex flex-col bg-gray-900 rounded-xl lg:rounded-3xl p-3 lg:p-6">
+            <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
                         <h3 class="text-2xl lg:text-3xl font-semibold">Punch-IN / Punch-OUT System</h3>
@@ -846,7 +846,7 @@
             </div>
 
             <!-- Digital Health Survey (DHS) -->
-            <div class="flex flex-col bg-gray-900 rounded-xl lg:rounded-3xl p-3 lg:p-6">
+            <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
                         <h3 class="text-2xl lg:text-3xl font-semibold">Digital Health Survey (DHS)</h3>
@@ -889,7 +889,7 @@
             </div>
 
             <!-- ABHA ID Integration -->
-            <div class="flex flex-col bg-gray-900 rounded-xl lg:rounded-3xl p-3 lg:p-6">
+            <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
                         <h3 class="text-2xl lg:text-3xl font-semibold">ABHA ID Integration</h3>
@@ -932,7 +932,7 @@
             </div>
 
             <!-- Family Planning (FP) Module -->
-            <div class="flex flex-col bg-gray-900 rounded-xl lg:rounded-3xl p-3 lg:p-6">
+            <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
                         <h3 class="text-2xl lg:text-3xl font-semibold">Family Planning (FP) Module</h3>
@@ -975,7 +975,7 @@
             </div>
 
             <!-- Sickle Cell Testing & Tracking -->
-            <div class="flex flex-col bg-gray-900 rounded-xl lg:rounded-3xl p-3 lg:p-6">
+            <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
                         <h3 class="text-2xl lg:text-3xl font-semibold">Sickle Cell Testing & Tracking</h3>
@@ -1018,7 +1018,7 @@
             </div>
 
             <!-- Profile – Facility, Geography & User -->
-            <div class="flex flex-col bg-gray-900 rounded-xl lg:rounded-3xl p-3 lg:p-6">
+            <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
                         <h3 class="text-2xl lg:text-3xl font-semibold">Profile – Facility, Geography & User</h3>
@@ -1061,7 +1061,7 @@
             </div>
 
             <!-- Role-Based Homepages -->
-            <div class="flex flex-col bg-gray-900 rounded-xl lg:rounded-3xl p-3 lg:p-6">
+            <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
                         <h3 class="text-2xl lg:text-3xl font-semibold">Role-Based Homepages</h3>
