--- a/index.html
+++ b/index.html
@@ -308,13 +308,12 @@
     </div>
 
     <!-- Bottom Bar -->
-    <div class="w-full flex flex-col gap-2 items-center py-16 bg-gray-950 mt-8">
-        <div class="flex flex-col text-center">
-            <p class="text-xl font-semibold m-2">Thanks for stopping by!</p>
-            <p class="m-2">Thank you for your interest in my work!</p>
-            
+    <div class="w-full flex flex-col gap-2 items-center py-16 px-3 bg-gray-950 mt-8 border-t-2 border-gray-800">
+        <div class="flex flex-col text-center items-center">
+            <p class="text-xl font-semibold m-2">Thank you for stopping by!</p>
+            <p class="bg-gray-900 px-4 py-2 rounded-xl inline-block w-max m-2"><a href="#" class="hover:text-amber-300 transition duration-500 ease-in-out">View Resume</a></p>
         </div>
-        <p class="text-gray-400 m-2">Made by Sumit Nikhare.  © 2024 Sumit Nikhare</p>
+        <p class="text-gray-400 m-2 text-center">Made by <a href="./about.html" class="hover:text-amber-300 transition duration-500 ease-in-out underline underline-offset-3">Sumit Nikhare</a>.  © 2024 Sumit Nikhare</p>
     </div>
 
     <!-- JS -->
