--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <!-- Comapany Details -->
             <div class="flex flex-col gap-2">
                 <p class="text-2xl underline underline-offset-4 hover:text-amber-300 transition-all duration-300"> <a href="https://www.khushibaby.org">Khushibaby</a></p>
-                <p class="text-gray-300 mt-1">Sr. UI/UX Designer | Jan 23 - Present</p>
+                <p class="text-gray-300 mt-1">UI/UX Designer - L3 | Jan 23 - Present</p>
                 <p class="text-gray-400 font-light mt-3">As a UI/UX designer at Khushi Baby, I played a key role in enhancing maternal and child healthcare in rural communities through innovative digital health solutions. I designed intuitive mobile interfaces for a health monitoring app, essential for healthcare workers in these areas. My focus was on creating user-friendly experiences that enabled easy access to and updates of vital health records.</p>
                 <p class="text-gray-400 font-light">I conducted user research to understand the needs of healthcare workers and families, ensuring that my designs addressed their specific challenges. By streamlining the monitoring process for vaccinations and maternal health, I aimed to improve healthcare delivery in underserved regions. My work contributed to empowering healthcare workers and reducing maternal and infant mortality rates, making a meaningful impact on public health in rural India.</p>
             </div>
@@ -138,7 +138,7 @@
                     </div>
               
                     <!-- Right: Text Content -->
-                    <div class="w-1/2 w-full flex flex-col gap-3 lg:gap-8 lg:px-6 lg:order-2">
+                    <div class="w-1/2 w-full flex flex-col gap-3 lg:gap-8 px-2 lg:px-6 lg:order-2">
                         <h3 class="text-2xl lg:text-3xl font-semibold">Community Health Integrated Platform (CHIP) 2.0</h3>
                         <p class="text-gray-400 font-light">The Community Health Integrated Platform (CHIP) is an Android app for ASHA workers and ANMs, designed to streamline health record management and reduce paper dependency. I contributed to enhancing the Khushi Baby health app by integrating features like RMNCH+A coverage and ABHA integration. User research guided the interface design, ensuring it met healthcare workers' needs. Continuous testing confirmed that the app effectively improves maternal and child health outcomes in underserved areas.</p>
                         <a href="./project-1.html">
